fix: arruma bugs 1